check box spacing resolve

--- a/css/admin_style.css
+++ b/css/admin_style.css
@@ -66,7 +66,7 @@
 		padding-top: 5px;
 		text-align: right;
 		vertical-align: baseline;
-		padding-right: 10px;
+		padding-right: 20px;
 	}
 
 	.dialog {
